# python-practice

./: dashboard.html
practice-grpc-project/: pyproject.toml
practice-grpc-project/grpc_client_sdk/core/: grpc_client.py  grpc_client_manager.py
practice-grpc-project/grpc_client_sdk/services/: apple_script_service_client.py  command_service_client.py  connection_service_client.py  file_transfer_service_client.py  gui_automation_service_client.py  logs_monitor_stream_service_client.py  registry_service_client.py  screen_capture_service_client.py  web_automation_client.py
practice-grpc-project/grpc_client_sdk/tests/: conftest.py
practice-grpc-project/test_framework/adapters/: __init__.py
practice-grpc-project/test_framework/configuration/: test_config.yaml
practice-grpc-project/test_framework/fixtures/: __init__.py  config_fixtures.py  logging_fixtures.py  login_fixtures.py  real_endpoint_config.py
practice-grpc-project/test_framework/grpc_session/: context_builder.py  service_context.py  session_context.py  session_manager.py
practice-grpc-project/test_framework/login_logout/: logout_command.py  tap_login.py  tap_logout.py  tapping_manager.py
practice-grpc-project/test_framework/loging_manager/: __init__.py  grpc_session_login_adapter.py  login_manager.py
practice-grpc-project/test_framework/utils/: __init__.py
practice-grpc-project/tests/: conftest.py  test_login_flow.py
practice-grpc-project/unit_test/: conftest.py
practice-grpc-project/unit_test/applescript_service/: __init__.py  test_applescript_integration.py  test_applescript_robust.py
(+126 files in other folders)
